--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,30 @@
   margin: 0px;
 }
 
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888888a8; /* Color of the thumb */
+  border-radius: 6px; /* Border radius of the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888888de; /* Color of the thumb */
+  cursor: pointer;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: white;
+}
+
 .app {
-  margin: 10px;
+  /* margin: 10px; */
 }
